--- a/Landing Page/landing.css
+++ b/Landing Page/landing.css
@@ -35,6 +35,15 @@ body {
     /* margin-top: 17px; */
     /* margin-left: 39px; */
 }
+
+@media screen and (max-width: 768px) {
+    #logo {
+        width: 100px;
+        /* margin-top: 17px; */
+        /* margin-left: 39px; */
+    }
+}
+
 .logoPemiraUI {
     float: left;
 }
